--- a/LibrarySystem/LibrarySystemConsole/LibrarySystemConsole.csproj
+++ b/LibrarySystem/LibrarySystemConsole/LibrarySystemConsole.csproj
@@ -4,16 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{53C9B093-C0DE-4618-BDEB-69E0AE9FEEB7}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LibrarySystem</RootNamespace>
-    <AssemblyName>LibrarySystem</AssemblyName>
+    <ProjectGuid>{7A353F5E-A728-4DF0-B240-6341B94B93C7}</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>LibrarySystemConsole</RootNamespace>
+    <AssemblyName>LibrarySystemConsole</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,6 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -41,27 +43,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Parsers\Abstract\EntityParser.cs" />
-    <Compile Include="Parsers\ParserCreator.cs" />
-    <Compile Include="Exceptions\XmlValidationException.cs" />
-    <Compile Include="Schemas\BookSchema.cs" />
-    <Compile Include="Exceptions\UnexpectedTypeException.cs" />
-    <Compile Include="Parsers\BookParser.cs" />
-    <Compile Include="Parsers\NewspaperParser.cs" />
-    <Compile Include="Parsers\PatentParser.cs" />
-    <Compile Include="ReadWriteLibrarySystem.cs" />
-    <Compile Include="Entities\Book.cs" />
-    <Compile Include="Entities\Interfaces\IEntity.cs" />
-    <Compile Include="Entities\Newspaper.cs" />
-    <Compile Include="Entities\Patent.cs" />
-    <Compile Include="Entities\SubEntities\Author.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Writers\Abstract\EntityWriter.cs" />
-    <Compile Include="Writers\BookWriter.cs" />
-    <Compile Include="Writers\NewspaperWriter.cs" />
-    <Compile Include="Writers\PatentWriter.cs" />
-    <Compile Include="Writers\WriterCreator.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\LibrarySystem\LibrarySystem.csproj">
+      <Project>{53C9B093-C0DE-4618-BDEB-69E0AE9FEEB7}</Project>
+      <Name>LibrarySystem</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
